mutants.out/log/cli_types__src__lib.rs_line_272_col_5.log

*** cli_types/src/lib.rs:272:5: replace parse_datetime_value -> Result<DateTime<Utc>> with Ok(DateTime::from_iter([Default::default()]))

*** mutation diff:
--- cli_types/src/lib.rs
+++ replace parse_datetime_value -> Result<DateTime<Utc>> with Ok(DateTime::from_iter([Default::default()]))
@@ -264,29 +264,17 @@
     }
 }
 
 fn parse_datetime_value_now(input: &str) -> Result<DateTime<Utc>> {
     parse_datetime_value(&Utc::now(), input)
 }
 
 fn parse_datetime_value(now: &DateTime<Utc>, input: &str) -> Result<DateTime<Utc>> {
-    if input.len() < 2 {
-        bail!("Invalid datetime format");
-    }
-
-    let (num, unit) = input.split_at(input.len() - 1);
-    let num: i64 = num.parse()?;
-    let subtractor = match unit {
-        "w" => Duration::weeks(num),
-        "d" => Duration::days(num),
-        "h" => Duration::hours(num),
-        _ => bail!("Unsupported datetime format"),
-    };
-    Ok(*now - subtractor)
+    Ok(DateTime::from_iter([Default::default()])) /* ~ changed by cargo-mutants ~ */
 }
 
 #[cfg(test)]
 mod test {
     use clap::CommandFactory;
 
     use super::*;
 


*** /root/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo check --tests --verbose --package=git_perf_cli_types@0.1.1
       Fresh unicode-ident v1.0.12
       Fresh proc-macro2 v1.0.95
       Fresh autocfg v1.1.0
       Fresh utf8parse v0.2.1
       Fresh quote v1.0.40
       Fresh anstyle-parse v0.2.3
       Fresh anstyle v1.0.10
       Fresh colorchoice v1.0.0
       Fresh is_terminal_polyfill v1.70.1
       Fresh anstyle-query v1.0.2
       Fresh anstream v0.6.18
       Fresh syn v2.0.100
       Fresh strsim v0.10.0
       Fresh heck v0.4.1
       Fresh clap_lex v0.6.0
       Fresh clap_derive v4.4.7
       Fresh clap_builder v4.4.12
       Fresh num-traits v0.2.17
       Fresh iana-time-zone v0.1.59
       Fresh anyhow v1.0.79
       Fresh chrono v0.4.39
       Fresh clap v4.4.13
       Dirty git_perf_cli_types v0.1.1 (/tmp/cargo-mutants-repo-l6y6pT.tmp/cli_types): the file `cli_types/src/lib.rs` has changed (1758958840.332177362s, 2s after last build at 1758958838.208719828s)
    Checking git_perf_cli_types v0.1.1 (/tmp/cargo-mutants-repo-l6y6pT.tmp/cli_types)
     Running `/root/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name git_perf_cli_types --edition=2021 cli_types/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,metadata -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=7ae4d00c7adb4409 -C extra-filename=-d56307f0ee33750c --out-dir /tmp/cargo-mutants-repo-l6y6pT.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-repo-l6y6pT.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-repo-l6y6pT.tmp/target/debug/deps --extern anyhow=/tmp/cargo-mutants-repo-l6y6pT.tmp/target/debug/deps/libanyhow-d3df5968a6327529.rmeta --extern chrono=/tmp/cargo-mutants-repo-l6y6pT.tmp/target/debug/deps/libchrono-0d4edf02d7163120.rmeta --extern clap=/tmp/cargo-mutants-repo-l6y6pT.tmp/target/debug/deps/libclap-812c94d234c2ea3d.rmeta`
warning: unused import: `bail`
 --> cli_types/src/lib.rs:1:22
  |
1 | use anyhow::{anyhow, bail, Result};
  |                      ^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0599]: no function or associated item named `from_iter` found for struct `chrono::DateTime` in the current scope
   --> cli_types/src/lib.rs:272:18
    |
272 |     Ok(DateTime::from_iter([Default::default()])) /* ~ changed by cargo-mutants ~ */
    |                  ^^^^^^^^^ function or associated item not found in `chrono::DateTime<_>`
    |
note: if you're trying to build a new `chrono::DateTime<_>` consider using one of the following associated functions:
      chrono::DateTime::<Tz>::from_naive_utc_and_offset
      chrono::DateTime::<Tz>::from_utc
      chrono::DateTime::<Tz>::from_local
      chrono::DateTime::<chrono::Utc>::from_timestamp
      and 6 others
   --> /root/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/chrono-0.4.39/src/datetime/mod.rs:94:5
    |
94  | /     pub const fn from_naive_utc_and_offset(
95  | |         datetime: NaiveDateTime,
96  | |         offset: Tz::Offset,
97  | |     ) -> DateTime<Tz> {
    | |_____________________^
...
108 |       pub fn from_utc(datetime: NaiveDateTime, offset: Tz::Offset) -> DateTime<Tz> {
    |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
126 |       pub fn from_local(datetime: NaiveDateTime, offset: Tz::Offset) -> DateTime<Tz> {
    |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
747 |       pub const fn from_timestamp(secs: i64, nsecs: u32) -> Option<Self> {
    |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: there is an associated function `from_str` with a similar name
    |
272 -     Ok(DateTime::from_iter([Default::default()])) /* ~ changed by cargo-mutants ~ */
272 +     Ok(DateTime::from_str([Default::default()])) /* ~ changed by cargo-mutants ~ */
    |

For more information about this error, try `rustc --explain E0599`.
warning: `git_perf_cli_types` (lib test) generated 1 warning
error: could not compile `git_perf_cli_types` (lib test) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/root/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name git_perf_cli_types --edition=2021 cli_types/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,metadata -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=7ae4d00c7adb4409 -C extra-filename=-d56307f0ee33750c --out-dir /tmp/cargo-mutants-repo-l6y6pT.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-repo-l6y6pT.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-repo-l6y6pT.tmp/target/debug/deps --extern anyhow=/tmp/cargo-mutants-repo-l6y6pT.tmp/target/debug/deps/libanyhow-d3df5968a6327529.rmeta --extern chrono=/tmp/cargo-mutants-repo-l6y6pT.tmp/target/debug/deps/libchrono-0d4edf02d7163120.rmeta --extern clap=/tmp/cargo-mutants-repo-l6y6pT.tmp/target/debug/deps/libclap-812c94d234c2ea3d.rmeta` (exit status: 1)

*** result: Failure(101)
